--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,5 @@
-/* Global parent element*/
+// Global parent element
+// We declare built in CSS variables
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -19,6 +20,13 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+// SCSS VARIABLES because media queries dont work with CSS vars
+$bp-largest: 75em;    // 1200px
+$bp-large: 68.75em;   // 1100px
+$bp-medium: 56.25em;  // 900px
+$bp-small: 37.5em;    // 600px
+$bp-smaller: 31.25em; // 500px
+
 * {
   margin: 0;
   padding: 0;
@@ -33,6 +41,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1 rem = 10px
+
+  @media only screen and (max-width: $bp-large){
+    font-size: 62.5%;
+  }
 }
 
 body {
